    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/idRelLayLista">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/activatedBackgroundIndicator">

                        <ListView
                            android:id="@+id/idListViewAlimentos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice"
                            android:listSelector="@drawable/selected"
                            android:clickable="true"
                            />

                    </LinearLayout>

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBtnMinus"
                        android:id="@+id/idBtnMinus"
                        android:layout_alignParentBottom="true"
                        android:layout_toLeftOf="@+id/idBtnExclude"
                        android:layout_toStartOf="@+id/idBtnExclude"
                        android:visibility="visible" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBtnExclude"
                        android:id="@+id/idBtnExclude"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:visibility="visible" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBtnPlus"
                        android:id="@+id/idBtnPlus"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@+id/idBtnExclude"
                        android:layout_toEndOf="@+id/idBtnExclude"
                        android:visibility="visible" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/Cadastro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/nome"
                            android:id="@+id/txtViewNome" />

                        <EditText
                            android:id="@+id/idNome"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/quantidadeAlimento"
                            android:id="@+id/txtViewQuantidade" />

                        <EditText
                            android:id="@+id/idQuantidade"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/idBtnSalvar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/btnSalvar" />
                </RelativeLayout>
                <!--
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBtnMinus"
                    android:id="@+id/idBtnMinus"
                    android:layout_gravity="left|bottom" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBtnExclude"
                    android:id="@+id/idBtnExcluir"
                    android:layout_gravity="center_horizontal|bottom" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBtnPlus"
                    android:id="@+id/idBtnPlus"
                    android:layout_gravity="right|bottom" />
                    -->
            </FrameLayout>


        </LinearLayout>

    </TabHost>
